# youtube-dl-GUI-1

./: main.py  pyproject.toml  setup.py
GUI/: AboutDialog.py  BatchAddUrls.py  LicenseDialog.py
Threads/: Download.py  PostProcessor.py
UI/: AboutDialog.py  BatchAddUrls.py  __init__.py  generate.py  gui.py  licenseDialog.py  resource_rc.py
youtube_dl_gui/: main.py
youtube_dl_gui/UI/resources/: gui.ui
