[tool.poetry]
name = "youtube-dl-gui-qt5"
version = "0.1.0"
description = "Yet another youtube-dl frontend written in python3 and qt5"
authors = ["Vadym Stupakov <vadim.stupakov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyqt5 = "^5.15.0"
youtube-dl = "^2020.6.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
